@@ -2329,6 +2329,12 @@
           <TD>This entry is no longer needed; instead, the factor is measured by a 
             calibration procedure and stored in the Calibrations file</TD>
         </TR>
+        <TR VALIGN="top">
+          <TD>AddToRawIntensity</TD>
+          <TD>Amount to add to the intensity values coming back from FEI scripting to keep 
+            the internal intensity values in the program in the range of 0 to 1; default is 
+            0.</TD>
+        </TR>
         <TR>
           <TD>UseIlluminatedAreaForC2</TD>
           <TD>This entry must be set to 1 on a Titan Krios in order to calibrate and 
